--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -39,4 +39,4 @@ jobs:
         with:
           build_dir: dist/integracion-app/browser
         env:
-          GITHUB_TOKEN: ${{secret.GITHUB_TOKEN}}
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
