se agrega el instalar dependencias
Se agrega en el archivo de integracion los pasos para instalar las dependencias de angular

--- a/.github/workflows/integracion.yml
+++ b/.github/workflows/integracion.yml
@@ -28,6 +28,10 @@ jobs:
       # Configuraion de Node
       - name: Configuracion Node
         uses: actions/setup-node@v4.0.3
+
+      # Instalar dependencias Angular
+      - name: Install deps
+        run: npm install
         
       # Build App
       - name: Build App
